--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "axios": "^1.7.9",
+    "faker": "^6.6.6",
     "firebase": "^11.1.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
+    "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.15.3"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
