--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
+    "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.9",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "firebase": "^11.1.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
