--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.6.13"
+    "sweetalert2": "^11.6.13",
+    "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
