--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.28.1",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13",
+    "swiper": "^11.1.15",
     "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
